creating flask app

--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "176f85f6",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "df47f2e7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a5b2b25c",
    "metadata": {},
    "outputs": [
@@ -188,12 +188,13 @@
        "4        3.0         None  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "results_df.to_csv('emp_learn_results.csv', index=False)\n",
     "results_df.head()"
    ]
   },
