--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "df47f2e7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a4a28668",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "a22540b6",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "max     921.000000    10.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "121ccc70",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "Name: career_grade, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "8ba03f68",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "Name: talent_review_status, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,20 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b8f01fa",
+   "execution_count": 12,
+   "id": "49af4745",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
-    "results_df.talent_review_status.value_counts(dropna=False)"
+    "results_df = results_df.drop([\"employee_first_name\", \"employee_last_name\"], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ddccb494",
+   "execution_count": null,
+   "id": "6fe8fb9e",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ddccb494",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -258,8 +267,6 @@
        "      <th></th>\n",
        "      <th>program_id</th>\n",
        "      <th>program_name</th>\n",
-       "      <th>employee_first_name</th>\n",
-       "      <th>employee_last_name</th>\n",
        "      <th>business_unit_corporate_function</th>\n",
        "      <th>location</th>\n",
        "      <th>career_grade</th>\n",
@@ -276,8 +283,6 @@
        "      <th>0</th>\n",
        "      <td>621</td>\n",
        "      <td>iLead</td>\n",
-       "      <td>Rory</td>\n",
-       "      <td>Newall</td>\n",
        "      <td>Assessment &amp; Qualifications</td>\n",
        "      <td>Middle East</td>\n",
        "      <td>F</td>\n",
@@ -292,8 +297,6 @@
        "      <th>1</th>\n",
        "      <td>621</td>\n",
        "      <td>iLead</td>\n",
-       "      <td>Oliver</td>\n",
-       "      <td>Paige</td>\n",
        "      <td>Assessment &amp; Qualifications</td>\n",
        "      <td>North America, United States</td>\n",
        "      <td>D</td>\n",
@@ -308,8 +311,6 @@
        "      <th>2</th>\n",
        "      <td>621</td>\n",
        "      <td>iLead</td>\n",
-       "      <td>Patrick</td>\n",
-       "      <td>Robotham</td>\n",
        "      <td>Assessment &amp; Qualifications</td>\n",
        "      <td>North America, Canada</td>\n",
        "      <td>E</td>\n",
@@ -324,8 +325,6 @@
        "      <th>3</th>\n",
        "      <td>621</td>\n",
        "      <td>iLead</td>\n",
-       "      <td>Torrie</td>\n",
-       "      <td>Lyall</td>\n",
        "      <td>Assessment &amp; Qualifications</td>\n",
        "      <td>North America, United States</td>\n",
        "      <td>D</td>\n",
@@ -340,8 +339,6 @@
        "      <th>4</th>\n",
        "      <td>621</td>\n",
        "      <td>iLead</td>\n",
-       "      <td>Julissa</td>\n",
-       "      <td>Travill</td>\n",
        "      <td>Strategy</td>\n",
        "      <td>United Kingdom</td>\n",
        "      <td>E</td>\n",
@@ -357,36 +354,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   program_id program_name employee_first_name employee_last_name  \\\n",
-       "0         621        iLead                Rory             Newall   \n",
-       "1         621        iLead              Oliver              Paige   \n",
-       "2         621        iLead             Patrick           Robotham   \n",
-       "3         621        iLead              Torrie              Lyall   \n",
-       "4         621        iLead             Julissa            Travill   \n",
+       "   program_id program_name business_unit_corporate_function  \\\n",
+       "0         621        iLead      Assessment & Qualifications   \n",
+       "1         621        iLead      Assessment & Qualifications   \n",
+       "2         621        iLead      Assessment & Qualifications   \n",
+       "3         621        iLead      Assessment & Qualifications   \n",
+       "4         621        iLead                         Strategy   \n",
        "\n",
-       "  business_unit_corporate_function                      location career_grade  \\\n",
-       "0      Assessment & Qualifications                   Middle East            F   \n",
-       "1      Assessment & Qualifications  North America, United States            D   \n",
-       "2      Assessment & Qualifications         North America, Canada            E   \n",
-       "3      Assessment & Qualifications  North America, United States            D   \n",
-       "4                         Strategy                United Kingdom            E   \n",
+       "                       location career_grade    talent_review_status  \\\n",
+       "0                   Middle East            F         Ready in 1 year   \n",
+       "1  North America, United States            D  Performing to standard   \n",
+       "2         North America, Canada            E         Ready in 1 year   \n",
+       "3  North America, United States            D               Ready now   \n",
+       "4                United Kingdom            E         Ready in 1 year   \n",
        "\n",
-       "     talent_review_status number_of_years_with_business  gender ethnicity  \\\n",
-       "0         Ready in 1 year                  6 - 10 years    Male     White   \n",
-       "1  Performing to standard             Less than 2 years    Male     White   \n",
-       "2         Ready in 1 year                    11 + years    Male     White   \n",
-       "3               Ready now             Less than 2 years  Female     White   \n",
-       "4         Ready in 1 year             Less than 2 years    Male     White   \n",
-       "\n",
-       "   nps_score nps_comments  \n",
-       "0        1.0         None  \n",
-       "1        4.0         None  \n",
-       "2       10.0         None  \n",
-       "3        2.0         None  \n",
-       "4        3.0         None  "
+       "  number_of_years_with_business  gender ethnicity  nps_score nps_comments  \n",
+       "0                  6 - 10 years    Male     White        1.0         None  \n",
+       "1             Less than 2 years    Male     White        4.0         None  \n",
+       "2                    11 + years    Male     White       10.0         None  \n",
+       "3             Less than 2 years  Female     White        2.0         None  \n",
+       "4             Less than 2 years    Male     White        3.0         None  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,6 +384,14 @@
    "source": [
     "results_df.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f800826e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
